# CynicEngine

./: .gitignore  .gitmodules  CMakeLists.txt
Config/: AppConfig.h  GfxConfig.h  Version.h.in
Core/: App.cpp  App.h  Common.h  IO.cpp  IO.h  Logger.h  Marco.h  NonCopyable.h  Singleton.h
Editor/: EditorApp.cpp  EditorApp.h  EditorMainEntry.cc
Editor/EditorUIPass/: EditorUIPass.cpp  EditorUIPass.h  EditorUIPassVulkanImpl.cpp  EditorUIPassVulkanImpl.h
Gfx/: IGfxBuffer.cpp  IGfxBuffer.h  IGfxBuffer.inl  IGfxCommandBuffer.cpp  IGfxCommandBuffer.h  IGfxCommon.cpp  IGfxCommon.h  IGfxDevice.cpp  IGfxDevice.h  IGfxPipeline.cpp  IGfxPipeline.h  IGfxResource.cpp  IGfxResource.h  IGfxShader.cpp  IGfxShader.h  IGfxSwapChain.cpp  IGfxSwapChain.h  IGfxTexture.cpp  IGfxTexture.h  IGfxVertexBinding.h  IGfxVertexDesc.h
Gfx/VK/: GfxVulkanBuffer.cpp  GfxVulkanBuffer.h  GfxVulkanBufferCommon.h  GfxVulkanCommandBuffer.cpp  GfxVulkanCommandBuffer.h  GfxVulkanCommon.cpp  GfxVulkanCommon.h  GfxVulkanDevice.cpp  GfxVulkanDevice.h  GfxVulkanObject.cpp  GfxVulkanObject.h  GfxVulkanPipeline.cpp  GfxVulkanPipeline.h  GfxVulkanQueue.h  GfxVulkanResource.cpp  GfxVulkanResource.h  GfxVulkanShader.cpp  GfxVulkanShader.h  GfxVulkanSwapChain.cpp  GfxVulkanSwapChain.h  GfxVulkanSyncObject.cpp  GfxVulkanSyncObject.h  GfxVulkanTexture.cpp  GfxVulkanTexture.h
Logger/: Logger.h
Math/: DualQuaternion.h  Math.hpp  Matrix2.h  Matrix3.h  Matrix4.h  Quaternion.h  Random.cpp  Random.h  Transform2.h  Transform3.h  Vector2.h  Vector3.h  Vector4.h
Platform/: InputSystem.cpp  InputSystem.h  PlatformInfo.cpp  PlatformInfo.h  Window.cpp  Window.h
Platform/SDL3/: SDL3InputSystem.cpp  SDL3InputSystem.h  SDL3PlatformInfo.h  SDL3Window.cpp  SDL3Window.h  main.cpp
Render/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Resource.h
Render/FrameGraph/: FrameGraph.h  RenderTask.h  RenderTaskBuilder.h  Resource.h
Test/: CMakeLists.txt  FrameGraphTest.cpp
Test/FrameGraphTest/: CMakeLists.txt  FrameGraphTest.cpp
Test/RenderTest/: CMakeLists.txt  MeshDrawPass.cpp  MeshDrawPass.h  RenderTestMainEntry.cc  TestApp.cpp  TestApp.h
Test/RenderTest/shaders/: meshDrawPass.frag.slang  meshDrawPass.vert.slang  meshdrawPass.common.slang
